--- a/src/main/zip/plugin.xml
+++ b/src/main/zip/plugin.xml
@@ -502,6 +502,15 @@
                      default-value="${p?:resource/XcodePath}"
                      hidden="true"/>
       </property>
+      <property name="xcrunPath">
+        <property-ui type="textBox"
+                     label="Path to xcrun"
+                     description="The path to the xcrun tool. If the 
+                        value is not specified, the value from the
+                        system path is used."
+                     default-value="${p?:resource/xcrunPath}"
+                     hidden="true"/>
+      </property>
       <property name="startupRetries" required="true">
         <property-ui type="textBox"
                      label="Startup Polling Maximum Retries"
